# Python-Authorization-Example

./: .dockerignore  .editorconfig  .env-example  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt
src/: config.py  exceptions.py  main.py  settings.py
src/api/: auth.py
src/api/decorator/: protect.py
src/api/routing/: auth.py
src/application/domain/: jwt.py  user_domain.py
src/application/services/: user_service.py
src/infrastructure/cache/: redis.py
src/infrastructure/database/: database.py  models.py
src/infrastructure/database/repositories/: user_repository.py
src/infrastructure/migrations/: env.py
src/infrastructure/migrations/versions/: 1f8dba6aa2a0_user_model.py  586be14f4982_user_model.py  f7d13b608798_user_table.py
src/infrastructure/tasks/: celery_app.py  tasks.py
src/infrastructure/utils/: hash_service.py  init_superadmin.py  token_service.py  validate_email.py
