[tool.poetry]
name = "authfastapi"
version = "0.1.0"
description = ""
authors = ["Noloquideus <daniilmanukian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
