[tool.poetry]
name = "authfastapi"
version = "0.1.0"
description = ""
authors = ["Noloquideus <daniilmanukian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
bcrypt = "^4.1.3"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
line-length = 150
path = "src"
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes errors
    "W",    # pycodestyle warnings
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "I",    # isort
    "UP",   # pyupgrade
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "RUF",  # ruff-specific rules
    "N",    # pep8-naming
    "D",    # pydocstyle
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.isort]
profile = "black"
